--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p>computer</p>
         </div>
         <div class="emoji">
-          <p class="emoji-img" id="computer-display"></p>
+          <p class="emoji-img" id="computer-display">✌️</p>
         </div>
       </div>
       <div class="announcement">
@@ -44,7 +44,7 @@
           <p>player</p>
         </div>
         <div class="emoji">
-          <p class="emoji-img" id="human-display"></p>
+          <p class="emoji-img" id="human-display">✌️</p>
         </div>
       </div>
       <div class="human_choices">
